syntax = "proto3";
package eventkit;

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

option go_package = "github.com/jtolio/eventkit/pb";

message Tag {
    string key = 1;
    oneof value {
        string string = 2;
        int64 int64 = 3;
        double double = 4;
        bytes bytes = 5;
        bool bool = 6;
        google.protobuf.Duration duration = 7;
    }
}

message Event {
    string name = 1;
    repeated string scope = 2;
    google.protobuf.Duration timestamp_offset = 3;
    repeated Tag tags = 4;
}

message Packet {
    string application = 1;
    string application_version = 2;
    string instance = 3;
    google.protobuf.Timestamp start_timestamp = 4;
    google.protobuf.Duration send_offset = 5;
    repeated Event events = 6;
}

message Record {
    string application = 1;
    string application_version = 2;
    string instance = 3;
    string source_addr = 4;
    google.protobuf.Timestamp timestamp = 5;
    google.protobuf.Duration timestamp_correction = 6;
    repeated Tag tags = 7;
}
